--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "sulaiman",
   "productName": "Sulaiman",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A keyboard launcher with no features",
   "main": "index.js",
   "private": true,
   "scripts": {
-    "dev": "npx babel src --out-dir compiled --presets @babel/preset-env --copy-files --source-maps --watch",
-    "compile": "npx babel src --out-dir compiled --presets @babel/preset-env --copy-files --no-comments --minified && rm -rf ./compiled/extensions/sulaiman-extension-debug",
+    "dev": "npx babel src --out-dir compiled --copy-files --source-maps --watch",
+    "compile": "npx babel src --out-dir compiled --copy-files --no-comments --minified && rm -rf ./compiled/extensions/sulaiman-extension-debug",
     "clean": "rm -r compiled",
-    "test": "eslint src && nyc mocha --require @babel/register --require @babel/polyfill",
-    "pre-release": "npm version patch --no-git-tag-version && npm run clean"
+    "patch": "npm version patch --no-git-tag-version"
   },
   "build": {
     "appId": "com.herpproject.sulaiman",
@@ -18,17 +17,17 @@
     "files": [
       "!.*",
       "!src",
+      "!aur",
       "!test",
       "!coverage"
     ],
     "directories": {
-      "output": "public"
+      "output": "./public"
     },
     "linux": {
+      "artifactName": "Sulaiman.${ext}",
+      "executableName": "Sulaiman",
       "category": "Utility"
-    },
-    "appImage": {
-      "artifactName": "Sulaiman.AppImage"
     },
     "nsis": {
       "artifactName": "Sulaiman-Setup.exe",
@@ -44,7 +43,7 @@
     "type": "git",
     "url": "https://gitlab.com/herpproject/Sulaiman.git"
   },
-  "author": "Herp Project",
+  "author": "Herp Project <herpproject0@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "fs-extra": "^7.0.0",
@@ -56,16 +55,11 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-transform-strict-mode": "^7.0.0",
-    "@babel/polyfill": "^7.0.0",
+    "@babel/core": "^7.0.1",
     "@babel/preset-env": "^7.0.0",
-    "@babel/register": "^7.0.0",
     "babel-eslint": "^9.0.0",
     "electron": "^3.0.0-beta.10",
-    "electron-builder": "^20.28.3",
-    "eslint": "^5.5.0",
-    "mocha": "^5.2.0",
-    "nyc": "^13.0.1"
+    "electron-builder": "^20.28.4",
+    "eslint": "^5.5.0"
   }
 }
