--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "appId": "com.herpproject.sulaiman",
     "asar": false,
     "files": [
-      "!.*",
-      "!src",
-      "!aur",
-      "!test",
-      "!coverage"
+      "node_modules",
+      "compiled",
+      "package.json",
+      "index.js",
+      "LICENSE",
+      "README.md",
+      "CHANGELOG.md",
+      "tray.png"
     ],
     "directories": {
       "output": "./public"
@@ -47,6 +50,7 @@
   "license": "MIT",
   "dependencies": {
     "auto-launch": "^5.0.5",
+    "electron-json-config": "^1.5.3",
     "fs-extra": "^7.0.0",
     "inly": "^2.0.2",
     "node-wget-promise": "^0.1.6",
@@ -55,12 +59,12 @@
     "vm2": "^3.6.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.1",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/cli": "^7.1.0",
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
     "babel-eslint": "^9.0.0",
-    "electron": "^3.0.0-beta.10",
+    "electron": "^3.0.0-beta.13",
     "electron-builder": "^20.28.4",
-    "eslint": "^5.5.0"
+    "eslint": "^5.6.0"
   }
 }
