--- a/package.json
+++ b/package.json
@@ -62,8 +62,8 @@
     "@babel/cli": "^7.1.0",
     "@babel/core": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
-    "babel-eslint": "^9.0.0",
-    "electron": "^3.0.0-beta.13",
+    "babel-eslint": "^10.0.0",
+    "electron": "^3.0.1",
     "electron-builder": "^20.28.4",
     "eslint": "^5.6.0"
   }
