--- a/src/extensions/sulaiman-launch-apps/package.json
+++ b/src/extensions/sulaiman-launch-apps/package.json
@@ -4,6 +4,7 @@
   "description": "search and launch apps installed on your operating system",
   "main": "index.js",
   "private": true,
+  "homepage": "https://gitlab.com/herpproject/sulaiman-app-launch",
   "repository": {
     "type": "git",
     "url": "https://gitlab.com/herpproject/sulaiman-app-launch.git"
@@ -28,6 +29,6 @@
       "KELiON\nfor his already established work on figuring this out": "https://www.github.com/KELiON/cerebro-basic-apps"
     }
   },
-  "author": "Herp Project",
+  "author": "Herp Project <herpproject0@gmail.com>",
   "license": "MIT"
 }
