--- a/package.json
+++ b/package.json
@@ -49,10 +49,10 @@
   "license": "MIT",
   "dependencies": {
     "auto-launch": "^5.0.5",
+    "electron-dl": "^1.12.0",
     "electron-json-config": "^1.5.3",
     "fs-extra": "^7.0.0",
     "inly": "^2.0.2",
-    "node-wget-promise": "^0.1.6",
     "npm": "^6.4.1",
     "request-promise-native": "^1.0.5",
     "vm2": "^3.6.3"
