new UI to handle and notify the user for conflicting themes and other extensions issues when they are aborted from loading, sulaiman now handles some misconfiguration on loading/installing extensions, when installing new extensions there's now UI to warn you about conflicting extensions issues and tells you how sulaiman will fix them if you choose to continue the installation, new phrase callback emits before search with the match string so you'll be able to make changes to arguments on-the-fly before search starts

--- a/src/extensions/sulaiman-extension-debug/package.json
+++ b/src/extensions/sulaiman-extension-debug/package.json
@@ -1,19 +1,15 @@
 {
   "name": "sulaiman-extension-debug",
-  "version": "0.1.1",
-  "description": "does tests on sulaiman extension APIs",
-  "main": "index.js",
   "private": true,
   "sulaiman": {
-    "displayName": "Extension Debug",
     "permissions": [
       "document",
       "clipboard"
     ],
     "modules": [
-      "path"
+      "fs"
     ]
   },
   "author": "Herp Project",
-  "license": "UNLICENSED"
+  "license": "MIT"
 }
