fixed the search issues, now it works like it should again

--- a/aur/PKGBUILD
+++ b/aur/PKGBUILD
@@ -1,5 +1,5 @@
-# Maintainer: Kerolos Zaki <kerolos4zaki@gmail.com>
-# Maintainer: Herp Project <herpproject0@gmail.com>
+# Maintainer: Kerolos Zaki <kerolos4zaki at gmail dot com>
+# Contributor: Herp Project <herpproject0 at gmail dot com>
 
 pkgname=sulaiman
 pkgrel=1
