--- a/src/extensions/sulaiman-default-dark/package.json
+++ b/src/extensions/sulaiman-default-dark/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sulaiman-default-dark",
   "version": "0.1.1",
-  "description": "The default dark theme for Sulaiman",
+  "description": "the default dark theme for Sulaiman",
   "main": "index.js",
   "private": true,
   "homepage": "https://gitlab.com/herpproject/sulaiman-default-dark",
