--- a/aur/sulaiman.desktop
+++ b/aur/sulaiman.desktop
@@ -1,9 +1,11 @@
 [Desktop Entry]
 Name=Sulaiman
 Name[en_US]=Sulaiman
+GenericName=Sulaiman
 Comment=A keyboard launcher with no features
 Exec=/usr/bin/sulaiman
 Icon=sulaiman
+Terminal=false
 Type=Application
 Categories=Utility
 StartupWMClass=sulaiman
