i don't understand the email part of the arch wiki

--- a/aur/PKGBUILD
+++ b/aur/PKGBUILD
@@ -1,5 +1,5 @@
-# Maintainer: Kerolos Zaki <kerolos4zaki at gmail dot com>
-# Contributor: Herp Project <herpproject0 at gmail dot com>
+# Maintainer: Kerolos Zaki <kerolos4zaki@gmail.com>
+# Contributor: Herp Project <herpproject0@gmail.com>
 
 pkgname=sulaiman
 pkgrel=1
