added the picture files of the new tray icons, removed the aur directory

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
         ".",
         "--debug"
       ],
-      "program": "${workspaceRoot}/index.js",
+      "program": "${workspaceRoot}/compiled/main/main.js",
       "console": "integratedTerminal",
       "protocol": "inspector"
     },
@@ -26,7 +26,7 @@
       "webRoot": "${workspaceRoot}",
       "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron",
       "runtimeArgs": [
-        "${workspaceRoot}",
+        "${workspaceRoot}/compiled/main/main.js",
         "--debug"
       ]
     }
