updated the ci script to match Dawayer's

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,30 +1,29 @@
 cache:
   paths:
+  - .electron-cache
   - node_modules
 
 variables: {
     # used to create the build.json using nodejs
     BUILD_JSON_EVAL:
-      "console.log(JSON.stringify({ branch: process.argv[1], commit: process.argv[2], date: process.argv[3], package: process.argv[4] || undefined, nsis: process.argv[5], deb: process.argv[6] }));"
+      "console.log(JSON.stringify({ branch: process.argv[1], commit: process.argv[2], pipeline: process.argv[3], date: process.argv[4] || undefined, package: process.argv[5] || undefined, nsis: process.argv[6], deb: process.argv[7] }));"
 }
 
 stages:
   - build
   # - npm
-  # - arch
 
 build:
   stage: build
   image: electronuserland/builder:wine
   script:
     # BUILD_JSON_EVAL variables
-    - "VERSION=$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]')"
     - "DATE=$(date -u +%a', '%d' '%b' '%Y' '%T' GMT')"
 
     # URLS are used to tell auto-updaters the correct file for the that specified version
-    - "NSIS_URL=https://gitlab.com/herpproject/Sulaiman/-/jobs/$CI_JOB_ID/artifacts/raw/public/Sulaiman-Setup.exe?job=build"
-    - "DEB_URL=https://gitlab.com/herpproject/Sulaiman/-/jobs/$CI_JOB_ID/artifacts/raw/public/Sulaiman.deb?job=build"
-    - "TAR_URL=https://gitlab.com/herpproject/Sulaiman/-/jobs/$CI_JOB_ID/artifacts/raw/public/Sulaiman.tar.xz?job=build"
+    - "NSIS_URL=https://gitlab.com/herpproject/$CI_PROJECT_NAME/-/jobs/$CI_JOB_ID/artifacts/raw/public/$CI_PROJECT_NAME-Setup.exe?job=build"
+    - "DEB_URL=https://gitlab.com/herpproject/$CI_PROJECT_NAME/-/jobs/$CI_JOB_ID/artifacts/raw/public/$CI_PROJECT_NAME.deb?job=build"
+    - "TAR_URL=https://gitlab.com/herpproject/$CI_PROJECT_NAME/-/jobs/$CI_JOB_ID/artifacts/raw/public/$CI_PROJECT_NAME.tar.xz?job=build"
 
     # the builds supported by sulaiman builtin update system
     - "DOWNLOAD_URLS=\"$NSIS_URL $DEB_URL\""
@@ -34,27 +33,28 @@ build:
     - "npm run compile"
 
     # build nsis installer for windows
-    - "echo $(node -e \"$BUILD_JSON_EVAL\" $CI_COMMIT_REF_NAME $CI_COMMIT_SHA \"$DATE\" \"nsis\") > build.json"
-    - "npx electron-builder --win NSIS"
+    # - "echo $(node -e \"$BUILD_JSON_EVAL\" $CI_COMMIT_REF_NAME $CI_COMMIT_SHA $CI_PIPELINE_ID \"$DATE\" \"nsis\") > build.json"
+    # - "npx electron-builder --win NSIS"
 
     # build debian package for linux
-    - "echo $(node -e \"$BUILD_JSON_EVAL\" $CI_COMMIT_REF_NAME $CI_COMMIT_SHA \"$DATE\" \"deb\") > build.json"
+    - "echo $(node -e \"$BUILD_JSON_EVAL\" $CI_COMMIT_REF_NAME $CI_COMMIT_SHA $CI_PIPELINE_ID \"$DATE\" \"deb\") > build.json"
     - "npx electron-builder --linux deb"
 
     # build tar.xz package for linux
-    - "echo $(node -e \"$BUILD_JSON_EVAL\" $CI_COMMIT_REF_NAME $CI_COMMIT_SHA \"$DATE\") > build.json"
+    - "echo $(node -e \"$BUILD_JSON_EVAL\" $CI_COMMIT_REF_NAME $CI_COMMIT_SHA $CI_PIPELINE_ID \"$DATE\") > build.json"
     - "npx electron-builder --linux tar.xz"
 
-    # create the build.json that will be kept in the artifacts for sulaiman builtin update system to use
-    - "echo $(node -e \"$BUILD_JSON_EVAL\" $CI_COMMIT_REF_NAME $CI_COMMIT_SHA \"$DATE\" \"\" $DOWNLOAD_URLS) > build.json"
+    # create the build.json that will be kept in the artifacts for the app builtin update system to use
+    - "echo $(node -e \"$BUILD_JSON_EVAL\" $CI_COMMIT_REF_NAME $CI_COMMIT_SHA $CI_PIPELINE_ID \"\" \"\" $DOWNLOAD_URLS) > build.json"
   artifacts:
-    # 6 month without a new build would mean that sulaiman is properly dead and you properly shouldn't download it anyway
-    expire_in: 6 mos
+    # a year without a new builds would mean that the app is properly dead, and you properly shouldn't download it anyway
+    expire_in: 12 mos
     paths:
-      - public/Sulaiman-Setup.exe
-      - public/Sulaiman.deb
-      - public/Sulaiman.tar.xz
+      # - public/$CI_PROJECT_NAME-Setup.exe
+      - public/$CI_PROJECT_NAME.deb
+      - public/$CI_PROJECT_NAME.tar.xz
       - build.json
+  # the branches that are valid for builds
   only:
     - release
 
@@ -65,42 +65,5 @@ build:
 #     - "echo _auth = $NPM_AUTH_TOKEN > ~/.npmrc"
 #     - "echo email = $NPM_EMAIL >> ~/.npmrc"
 #     # - "npm publish"
-#   only:
-#     - release
-
-# arch:
-#   stage: arch
-#   image: whynothugo/makepkg:latest
-#   script:
-#     # set variables
-#     - "VERSION=$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]')"
-
-#     # set access
-#     - "echo \"$AUR_SSH_PRIVATE_KEY\" > ~/.ssh/id_rsa"
-#     - "ssh-add -K ~/.ssh/id_rsa"
-#     - "git config user.name \"$GIT_USERNAME\""
-#     - "git config user.email \"$GIT_EMAIL\""
-
-#     # pull the current package info 
-#     - "cd aur"
-#     - "git fetch"
-#     - "git pull"
-
-#     # update the package info
-#     - "echo \"$(head -n -3 PKGBUILD)\" > PKGBUILD"
-#     - "echo \"pkgver=$VERSION\" >> PKGBUILD"
-#     - "echo \"source=('icon.png' 'sulaiman.desktop' '$TAR_URL')\" >> PKGBUILD"
-#     - "echo \"md5sums=('$(md5sum icon.png | awk '{print $1}')' '$(md5sum sulaiman.desktop | awk '{print $1}')' '$(md5sum ../public/Sulaiman.tar.xz | awk '{print $1}')')\" >> PKGBUILD"
-#     - "makepkg --printsrcinfo > .SRCINFO"
-
-#     - "echo \"-----------------------------now Reading PKGBUILD-----------------------\""
-#     - "echo \"$(head -n -0 PKGBUILD)\""
-#     - "echo \"-----------------------------now Reading .SRCINFO-----------------------\""
-#     - "echo \"$(head -n -0 .SRCINFO)\""
-
-#     # release a new AUR package
-#     # - "git add PKGBUILD .SRCINFO"
-#     # - "git commit -m \"$VERSION\""
-#     # - "git push"
 #   only:
 #     - release
